[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oxygenio"
version = "0.1.1"
authors = [
  {name="Esaú Mascarenhas", email="esaumasc@gmail.com"},
]
description = "GUI Development with Python, React and Typescript"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask-socketio",
  "gevent",
  "gevent-websocket",
  "pyinstaller==6.2.0"
]
keywords = ["gui", "eel", "electron", "typescript", "javascript", "react"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.scripts]
oxygen = "oxygenio.scripts:main"

[project.urls]
Homepage = "https://github.com/EsauM10/oxygenio"